# Plataforma-Quantitativa

./: .gitignore  README.md  package.json
.agents/skills/create_installer/: SKILL.md
.cursor/plans/: roadmap_sem_engine_9c251628.plan.md  troca-ativo-mock_94bb0a7a.plan.md
.specs/features/distribution-layer/: spec.md
.specs/features/rule-engine/: spec.md
.specs/project/: PROJECT.md  ROADMAP.md  STATE.md
app/: package-lock.json  package.json
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commands.rs  lib.rs  (+1 more)
distributor/: candle_macd.py  config.py  connection_manager.py  flow_tracker.py  main.py  message_router.py  requirements.txt  stats_logger.py  websocket_server.py  zmq_consumer.py
distributor/logs/: stats_2026-03-15.csv  stats_2026-03-17.csv  stats_2026-03-18.csv
engine/: CMakeLists.txt  README.md  vcpkg.json
engine/include/: profit_types.h
engine/src/: agent_ranking.h  alert_bus.cpp  alert_bus.h  alert_types.h  asset_controller.cpp  asset_controller.h  config.h  dom_snapshot.cpp  dom_snapshot.h  event_bus.cpp  event_bus.h  event_dispatcher.cpp  event_dispatcher.h  main.cpp  mock_feed.cpp  mock_feed.h  profit_bridge.cpp  profit_bridge.h  rsi_calculator.h  trade_stream.cpp  trade_stream.h  zmq_publisher.cpp  zmq_publisher.h
engine/src/rules/: rule1_aggression.cpp  rule1_aggression.h  rule2_wall.cpp  rule2_wall.h  rule3_vwap.cpp  rule3_vwap.h  rule4_iceberg.cpp  rule4_iceberg.h  rule5_convergence.cpp  rule5_convergence.h  rule6_absorption.cpp  rule6_absorption.h  rule_base.h
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
installer-resources/sounds/: README.md  create-placeholder-wav.ps1
scripts/: build-installer.ps1  run-dev.ps1
sync_monitor/: config.py  main.py  price_fetcher.py  requirements.txt  sync_calculator.py
(+31 files in other folders)
